# ACNAL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  README.md
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
TestClient/: main.cpp
samples/: CMakeLists.txt
samples/APIClientLog/: main.cpp
scripts/: doxygen_config.cmake  gtest_config.cmake  vcpkg_prep.cmake
src/: ACNAL.cpp  ACNAL.h  ACNALConfig.h.in  CMakeLists.txt
src/Core/: ACNAL.cpp  ACNAL.h  CMakeLists.txt  _premh.h
src/TestClient/: CMakeLists.txt  main.cpp
src/private/: dllmain.cpp
src/public/: ACNAL.h
tools/: devsetup.bat
